# serializer version: 1
# name: test_r4_asmaddr2_bf16_srvw_golden
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_UserArgs_MT128x128x163MAUOAxOhmI6fJgipSTYT7s_2IaOCzp-2BlBUr1YWOs=',
      'err': 0,
    }),
  ])
# ---
# name: test_r4_asmaddr2_fp32_golden
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT64x256x16_MI16x16xpO1nZQkNBrL3cXbPHybXjN7u_6O_DksCYt9n7Fgu60s=',
      'err': 0,
    }),
  ])
# ---
